# ros2_autonomous_racing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
car_controller/: CMakeLists.txt  package.xml
car_controller/config/: params.yaml  params_car.yaml  params_sim.yaml
car_controller/include/car_controller/: ttc.h
car_controller/launch/: launch_all_car.py  launch_all_sim.py  launch_car_aeb_drive.py  launch_sim_aeb_drive.py
car_controller/src/: aeb.cpp  aeb_node.cpp  angle_simulation_node.cpp  bicycle_control_node.cpp  drive.cpp  model_car_bicycle_control_node.cpp  simulation_drive.cpp  ttc.cpp
car_controller/src/old/: aeb_2.cpp  angle.cpp  model_car_angle.cpp  model_car_bicycle_control_node.cpp  simulation_drive copy.cpp
image_bag/: metadata.yaml
image_controller/: CMakeLists.txt  package.xml
image_controller/image_controller/: PROTOTYPE_occupancy.py  VisionCalculation.py  camera_software.py  image_logic.py  image_saver_py.py  prototype.py
image_controller/image_controller/nodes/: image_logic.py
image_controller/launch/: publish_bag_launch.py  simulation_controll_launch.py  test_image_logic_launch.py
image_controller/src/: image_bag_reader.cpp  image_reader.cpp  image_recorder.cpp  image_saver.cpp  image_transformer.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/car_controller/lib/car_controller/: aeb_node
install/car_controller/share/car_controller/: local_setup.sh  package.sh
install/car_controller/share/car_controller/launch/: test_launch.py
install/image_controller/lib/image_controller/: image_bag_reader  image_recorder  image_transformer
install/image_controller/local/lib/python3.10/dist-packages/image_controller/: camera_software.py
install/image_controller/local/lib/python3.10/dist-packages/image_controller-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/image_controller/share/image_controller/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_ackermann_gazebo/share/ros2_ackermann_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_ackermann_gazebo/share/ros2_ackermann_gazebo/world/: emtpy_export.sdf
log/: latest_build
perception/: CMakeLists.txt  README.md  package.xml
perception/launch/: publish_bag_launch.py  test_image_logic_launch.py
perception/perception/: LaneDetection.py  OccupancyGridNode.py  VisionCalculation.py  image_processing.py  lane_detector.py  prototype.py  run_perception.py
perception/perception/utils/: run_through_script.py
perception/scripts/: run_through_script.py
perception/src/: image_saver.cpp
planning2/config/: controller_server.yaml  local_costmap.yaml  rpp_config.yaml
planning2/nav2_controller/: CMakeLists.txt
planning2/nav2_controller/include/nav2_controller/: controller_server.hpp
planning2/nav2_controller/launch/: car_planning.py  main.py
planning2/nav2_controller/src/: controller_server.cpp
planning2/nav2_regulated_pure_pursuit_controller/: CMakeLists.txt
planning2/nav2_regulated_pure_pursuit_controller/src/: path_publisher.cpp
rc_controller/: package.xml  setup.cfg  setup.py
rc_controller/rc_controller/: birdseyeview.py  black_and_white_img.py  calibration.py  camera_calibration.py  color_detection.py  drive_10_meter.py  drive_auto.py  edge_detection.py  get_images.py  lane_detection.py  lane_detection_2.py  my_calibration.yaml  traffic_light_detection.py
ros2_ackermann_gazebo/: package.xml
ros2_ackermann_gazebo/launch/: ackermann_drive_example.launch.py  rviz_launch.py
ros2_ackermann_gazebo/urdf/: test_ackermann_drive(first).xacro.urdf  test_ackermann_drive(own).xacro.urdf  test_ackermann_drive.xacro.urdf
ros2_ackermann_gazebo/world/: emtpy_export.sdf
